--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,51 @@
     animation: logo-spin infinite 20s linear;
   }
 }
+
+nav{
+  top: 10px;
+  left: 23vw;
+  right: 25vw;
+  width: 50vw;
+  position: absolute;
+  background-color: teal;  
+  border:2px black solid !important;
+  border-radius: 20px;
+  height:auto !important;
+  margin-top: 20px;
+  padding: 20px 20px;
+  font-size: larger;
+  /* width: 75vw !important; */
+  margin-left: 0rem !important;
+  min-width: 705px;
+}
+.nav-link {
+color:#fff;
+border-radius: 5px;
+border-color: black !important;
+/* padding: 20px; */
+padding-top: 5px;
+padding-bottom: 5px;
+margin-left: 10px;
+padding-left: 20px;
+padding-right: 20px;
+background-color: rgb(1, 36, 24);
+}
+
+.main-example{
+  top: 120px;
+  left: 23vw;
+  right: 25vw;
+  width: 50vw;
+  padding: 20px 20px;
+  position: absolute;
+  border:2px black solid !important;
+  border-radius: 20px;
+  background-color: teal; 
+  min-height: 75vh;
+  min-width: 705px;
+}
+
 .card {
   padding: 3em;
   display: flex;
@@ -42,22 +87,31 @@
 .read-the-docs {
   color: #888;
 }
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: stretch;
+  flex-wrap: nowrap;
+}
+
 .container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  align-items: stretch;
+  justify-content: center;
   flex-wrap: nowrap;
+  align-items: flex-end;
 }
 
 .container-box {
   border: 1.5px solid teal;
   border-radius: 20px;
   margin: 5px;
-  height: 30vw;
-  width: 30vw;
-  min-height: 250px;
-  min-width: 250px;
+  height: 300px;
+  width: 300px;
+  min-height: 300px;
+  min-width: 300px;
 }
 
 .block {
@@ -77,6 +131,13 @@
 .card-button2:hover {
   background-color: red;
 }
+.item-parent{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: stretch;
+
+}
 
 .item {
   float: right;
@@ -85,6 +146,10 @@
 .item h1 {
   text-align: left;
   margin-top: -5px;
+}
+
+.item.item-0{
+  width: 500px;
 }
 
 .item-0 {
@@ -109,24 +174,3 @@
   min-width: 200px;
 }
 
-nav{
-  background-color: teal;  
-  border:2px black solid !important;
-  border-radius: 20px;
-  height:35px !important;
-  padding-top: 10px;
-  width: 75vw !important;
-  margin-left: 0rem !important;
-}
-.nav-link {
-color:#fff;
-border-radius: 5px;
-border-color: black !important;
-/* padding: 20px; */
-padding-top: 5px;
-padding-bottom: 5px;
-margin-left: 10px;
-padding-left: 20px;
-padding-right: 20px;
-background-color: rgb(1, 36, 24);
-}
